# payvorax

./: .env.example  .gitignore  CeziColaSeniorSoftwareEngineer.md  ENVIRONMENT.md  MIGRATION_DETAILS.md  Makefile  PRESENTATION.md  PRESENTATION.xml  QUICKSTART.md  README.md  TEST_CATALOG.md  UNIT_TESTS_DETAILS.md  alembic.ini  netlify.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  requirements-windows.txt  requirements.txt  start.py
alembic/: env.py
app/: main.py  web_routes.py  wsgi.py
docs/: RECONCILE_PLAYBOOK.md
frontend/: README.md  config.js  index.html  netlify.toml
scripts/: BioTechPayIA.txt  _audit_asaas_vs_db.py  _diag_balances_now.py  _diag_now.py  _fix_balance_cezi.py  _reset_all_balances.py  _run_audit_now.py  _trace_balance.py  _zero_matrix_psycopg2.py  add_password_reset_columns.py  add_saldo_non_negative_constraint.py  backfill_shared_wallet.py  backup_db.ps1  credit_hellen_002.py  diag_saldo_disponivel.py  extract_frontend.js  extract_frontend.py  fix_admin_js.py  fix_biocode_balance.py  fix_db_schema_limit.py  fix_identities.py  fix_processing_stuck.py  fix_stuck_processing.py  full_reset.py  inspect_biocode_balance.py  inspect_schema.py  migrate_add_auto_renew.py  migrate_add_trial_used.py  migrate_pix_keys.py  monitor_pending.ps1  notify_unverified_users.py  optimize_performance.py  reconcile_processing.py  scan_frontend_secrets.py  set_password.py  simulate_qrcode_cnpj.py  strip_jinja_public.js  test_login_crash.py  zero_biocodetechnology_balance.py
tests/: conftest.py  test_admin_delete_user.py  test_cards.py  (+16 more)
(+90 files in other folders)
